# python-gld-practice

./: README.md  pyproject.toml  requirements.txt  setup-py.txt  setup.cfg  setup.py
.github/workflows/: pytest-and-black.yml
src/mathTools/: math.py
src/mathTools/geom/: circle.py  square.py
tests/: test_mathTools.py
