[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathTools"
authors = [
    {name = "Joe O'Connell", email = "github@bravoindia.net"},
]
description = "A math package to practice building python packages"
readme = "README.md"
requires-python = ">=3.6"


[tool.setuptools]
name = "mathTools"
version = "2023.4.7.7"
packages = ["mathTools"]
where = "src"
install_requires = ["ipython", "black", "pandas", "pytest", "mypy"]
tests_require = ["unittest"]
test_suite = "tests"