[metadata]
name = mathTools
version = 2023.4.7.6
description = A collection of math tools to practice building python packages
long_description = file: README.md
author = Joe OConnell
author_email = github@bravoindia.net
url = https://github.com/ocjr/mathTools

[options]
packages = find:
install_requires =
    ipython
    black
    pandas
    pytest
    mypy

[options.packages.find]
where = src

[options.package_data]
mathTools = /*

[options.extras_require]
dev =
    pytest-cov
    pylint
    flake8
    sphinx

[options.entry_points]
console_scripts =
    mathTools = mathTools.cli:main

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[pylint]
disable = C0114, C0115, C0116
max-line-length = 120